<resources>
    <string name="app_name">ProfNotes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_settings">Settings</string>

    <!-- Login -->
    <string name="login">Вход</string>
    <string name="hintLogin">Пожалуйста, войдите для продолжения</string>
    <string name="hintLoginOrPhone">Номер телефона или логин</string>
    <string name="password">Пароль</string>
    <string name="loginWithoutAccount">Или войдите без аккаунта, если не хотите пользоваться всеми возможностями</string>
    <string name="hintForgotPassword">Не помните свой пароль? Восстановите пароль</string>
    <string name="btnLogin">Войти</string>
    <string name="text_view_greetings">Добро пожаловать,</string>
    <string name="hint_search">Поиск по заметкам</string>
    <string name="new_notes">Новые заметки</string>
    <string name="my_tasks">Мои задачи</string>
    <string name="all_tasks">Все задачи</string>
</resources>