<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    tools:context="ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ivUser"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/photo_test"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="25dp"
            app:riv_oval="true"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvGreetings"
            style="@style/TextH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/text_view_greetings"
            android:textColor="@color/gray"
            app:layout_constraintStart_toEndOf="@+id/ivUser"
            tools:layout_editor_absoluteY="16dp"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/ivBull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bell"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/ivUser"
            tools:layout_editor_absoluteY="29dp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivUser">

            <TextView
                android:id="@+id/tvToday"
                style="@style/TextH2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Сегодня"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/tvDate"
                style="@style/TextH3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Понедельник, 11 июля" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/linearLayout1"
            app:layout_constraintTop_toBottomOf="@+id/ivUser">

            <TextView
                android:id="@+id/tvNews"
                style="@style/TextH2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Новости"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/tvNewNote"
                style="@style/TextH3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4 новые заметки" />

        </LinearLayout>
        <EditText
            android:id="@+id/edSearch"
            style="@style/TextH3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_login_edit_text"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:hint="@string/hint_search"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tvNewNotes"
            style="@style/TextH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_notes"
            android:textAllCaps="true"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/edSearch"
            tools:layout_editor_absoluteX="0dp"
            tools:ignore="MissingConstraints" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNewNotes"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tvMyTasks"
            style="@style/TextH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/my_tasks"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewPager" />

        <TextView
            android:id="@+id/tvAllTasks"
            style="@style/TextH4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/all_tasks"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewPager" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tvMyTasks"
            tools:layout_editor_absoluteX="-16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>